added aggregate queries

--- a/csvcompare/csvcompare-war/src/main/webapp/index.xhtml
+++ b/csvcompare/csvcompare-war/src/main/webapp/index.xhtml
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="faces/csvLoad.xhtml">Csv Load</a></li>
             <li><a href="faces/csvQuery.xhtml">Csv Query</a></li>
+            <li><a href="faces/csvStatistic.xhtml">Csv Statistic</a></li>
             <li><a href="faces/csvCompare.xhtml">Csv Compare</a></li>
         </ul>
     </h:body>
