add simple composition template use Omnifaces FacesViews

--- a/csvcompare/csvcompare-war/src/main/webapp/WEB-INF/faces-views/csvLoad.xhtml
+++ b/csvcompare/csvcompare-war/src/main/webapp/WEB-INF/faces-views/csvLoad.xhtml
@@ -7,5 +7,11 @@
     template="/WEB-INF/template/mainTemplate.xhtml">
 
     <ui:define name="content">
+        <h:form>
+            <h:inputTextarea value="#{csvLoadController.csv1Data}" />
+            <h:inputTextarea value="#{csvLoadController.csv2Data}" />
+
+            <h:commandButton value="Load" action="#{csvLoadController.loadAction()}"/>
+        </h:form>
     </ui:define>
 </ui:composition>
