--- a/csvcompare/csvcompare-war/src/main/webapp/WEB-INF/faces-views/csvCompare.xhtml
+++ b/csvcompare/csvcompare-war/src/main/webapp/WEB-INF/faces-views/csvCompare.xhtml
@@ -7,5 +7,13 @@
     template="/WEB-INF/template/mainTemplate.xhtml">
 
     <ui:define name="content">
+        <h:form>
+            <h:commandButton value="Compare" action="#{csvCompareController.compareAction()}"/>
+        </h:form>
+        <ui:repeat value="#{csvCompareController.data}" var="elem">
+            <pre>
+                #{elem}
+            </pre>
+        </ui:repeat>
     </ui:define>
 </ui:composition>
