--- a/csvcompare/csvcompare-war/src/main/webapp/WEB-INF/faces-views/csvQuery.xhtml
+++ b/csvcompare/csvcompare-war/src/main/webapp/WEB-INF/faces-views/csvQuery.xhtml
@@ -1,10 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition
+    template="/WEB-INF/templates/mainTemplate.xhtml"
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    template="/WEB-INF/template/mainTemplate.xhtml">
+    >
 
     <ui:define name="content">
         <h:form>
@@ -12,7 +13,7 @@
         </h:form>
         <ui:repeat value="#{csvQueryController.data}" var="elem">
             <pre>
-                #{elem}
+                <h:outputText value="#{elem}"/>
             </pre>
         </ui:repeat>
     </ui:define>
